--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -5,6 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="./css/index.css"
+    />
+
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="./css/alert.css"
+    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
@@ -14,13 +30,6 @@
     />
 
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-
-    <link
-      rel="stylesheet"
-      type="text/css"
-      media="screen"
-      href="./css/index.css"
-    />
 
     <title>Tic-Tac-Toe</title>
   </head>
@@ -166,7 +175,7 @@
     <script>
       feather.replace();
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <script src="./js/index.js"></script>
   </body>
 </html>
